--- a/diplomka.tex
+++ b/diplomka.tex
@@ -570,19 +570,50 @@ Testované rozložení stránky vyhledávače Google žádný levý sloupeček n
 
 \subsubsection{Aplikace v praxi}
 
-{\bf Optimalizace kampaní}
+Teď, když byly nastíněny základy toho, jak webová analytika sbírá a interpretuje data je na místě se zmínit o praktickém využití těchto dat.
 
-{\bf Optimalizace konverze}
+%Optimalizace konverze reklamních kampaní
 
-{\bf Split testing}
+Na počátku, kdy se měřil pouze počet zobrazení stránky, byly tyto nástroje měřítkem popularity stránek. Podle denní návštěvnosti se dalo odvodit, kolik by si měla stránka účtovat za reklamu\footnote{Dnes jsou více rozšířené sytémy, které použadují platbu za počet prokliků a jejich cena se určuje formou aukce. Například AdWords, u nás Sklik.}, většinou formou bannerů. Návštěvnost stránek i dnes určuje cenu reklamy na stránce, PR článků a obecně hodnotu celé stránky.
+
+Když potenciální zákazník klikne na reklamu a dostane se naši stránku, stojí nás to peníze. Ne každý zákazník objedná, nebo jinak vygeneruje zisk. Takže kolik zákazníků, kteří se na naši stránku dostali přes reklamu u nás vlastně nakoupí? A ještě lépe - kolik nás ve výsledku stojí nová objednávka? Na tyto otázky standardně odpovídá napříkald Google Analytics, který je přímo napojen na AdWords\footnote{Pay Per Click reklama od Googlu}.
+
+V okamžiku, kdy se na naši stránku dostane uživatel, vstupuje do hry měření konverze. Ta měří poměr návštěv a uskutečněných cílů - například počet objednávek, nebo počet nových emailů v seznamu odběratelů novinek. Konverzní poměr se zvlášť měří u uživatelů, kteří přišli z vyhledávače, přes reklamu anebo sami napsali adresu webové stránky do prohlížeče.
+
+Znalost jednotlivých konverzí a napojení na reklamní systém umžňuje určit cenu za konverzi a tím i efektivitu jednotlivých kampaní.
 
 
 
+\bigskip
 
-\subsubsection{Clickstream analýza}
+%Optimalizace pro vyhledávače
 
-\subsubsection{Měření konverze}
+Typické zdroje návštěvnosti jsou reklama, vyhledávání a dnes nově sociální média. Vyhledávače jsou kapitolou samou pro sebe. Vyhledávače používá velké denně množství lidí a je lákavé dostat svůj web do horních pozic pro vyhledávané fráze související s tématem stránky. Díky tomu, že reklama je relativně drahá je optimalizace pro vyhledávače žádanou službou, která představuje dlouhodobý nárůst návštěvnosti za jednorázovou investici.
 
+Návštěvnost z vyhledávačů se dá efektivně měřít i s zjištěním návštěvnosti pro jednotlivé klíčové slova a vyhledávací fráze. Analytické nástoje tak umožňují změřit o kolik se zvedl počet objednávek, registrací nebo čehokoli, co majitel stránky sleduje jako cíl konverze.
+
+
+%Split testing
+
+Mocným nástrojem pro optimalizaci webových stránek je split-testování, taktéž zvané A/B testování. Tato technika spočívá v tom, že se vytvoří dvě varianty stránky a a některým uživatelům se zobrazí jedna varianta a některým druhá. Na daných stránkách se pak měří konverze a výsledkem testu je zjištění, která stránka měla větší konverzi.
+
+Tímto způsobem se dají optimalizovat stránky, které mají zákazníka přimět k registraci, nákupu, nebo jiné cílové akci. Tato technika umožňuje určit, jaký název produktu bude mít lepší výsledky, alternativní slogany, vzhled produktu, nebo dokonce i cenu produktu. 
+
+V případě testování ceny produktu se některým zákazníkům zobrazí například \$19 a jiným \$49. Je docela možné, že produkt za \$49 se bude lépe prodávat, protože zákazníci od něj budou očekávat větší kvalitu. Přesto, že nezní příliš sofistikovaně, umožňuje split-testing každému experimentovat s mnoha aspekty a reálně ověřit, zda navrhované změny opravdu vedou k lepší konverzi.
+
+%optimalizace použitelnosti patří ještě pod optimalizaci konverze
+
+
+
+Druhá strana mince je v případě webové analytiky hlubší porozumění. Do tého kategorie patří informace typu jaké prohlížeče a zařízení používají, jaký jazyk preferují, z jaké části světa jsou, odkud na stránku přicházejí, co na webu dělají a kudy stránku opouštějí. 
+
+V závislosti na zaměřené webové stránky je tady větší nebo menší snaha poznat zákazníka. Dnešní analytcké nástroje mají pouze omezené možnosti práce se zákazníkem, především z toho důvodu, že odmítají vědět o tom, že jde o konkrétního zákazníka, jako například Google Analytics, který sledování konkrétních uživatelů přímo zakazuje v podmínkách použití.
+
+Na práci se zákazníky se specializují jiné systémy jako jsou CRM Systémy\footnote{Customer Relationship Management systémy} a jiné úzce specializované produkty, které se již webovou analytikou nezabývají. 
+
+Právě znalost konkrétního zákazníka a práce s ním odlišuje nový analytický produkt od ostatních. V dnešní době sodiálních médií, kdy telefonní operátoři mají teamy lidí, kteří se starají o zákaznickou podporu na sociálních sítích, je kritické mít přehled o svých zákaznících a to zvláště u webových aplikací, kde interakce zákazníka s apliakcí je to, za co nás zákazník platí.
+
+Příští kapitola se věnuje vlastnostem nového nástroje a jejich využití.
 
 
 
