--- a/diplomka.tex
+++ b/diplomka.tex
@@ -804,9 +804,21 @@ Proto je dobré sledovat, zda noví uživatelé produkt používají a případn
 
 Účelem této fáze je, aby si zákazník na produk trochu zvykl a mohl se pak rozhodnout, zda si produkt předplatí, nebo ne. Toto je krásný příklad win-win, kdy benefituje jak zákazník, tak poskytovatel.
 
+Tento pohled se zaměřuje na segment uživatelů a přehled o tom, kolik nových uživatelů se zaregistrovalo, kolik jich přešlo na placený plán v porovnání s dlouhodobým průměrem. Po stránce používání produktu pak poskytuje přehled o tom, jaké funkce produktu uživatelé používají a porovnání s ostatními skupinami.
+
+Pohled poskytuje také pokročilou segmentaci uživatelů, podle toho jak dlouho a jak často aplikaci používají na nové zákazníky, pokročilé a ty, kteří aplikaci přestali používat.
 
 \subsubsection{Zákazníci}
-%80/20?
+
+Zákazníci jsou ti uživatelé, kteří již platí. Tento pohled se příliš neliší od pohledu uživatelé, také obsahuje segmentaci zákazníků na nové, stálé, "power" a neaktivní uživatele.
+
+V tomho pohledu se navíc zobrazuje u jednotlivých uživatelských skupin měsíční výdělek a je možno je segmentovat podle toho, jaký mají předplacený plán. 
+
+Pokud zákazník poskytuje data o tom, jaké plány zákazníci využívají otevírají se možnosti reálného výpočtu ROI u jednotlivých kampaní a hlubší analýzu zákaznícké báze.
+
+Otevírají se také možnosti, které se blíží systémům pro management vztahů se zákazníkem a vyhodnocování ziskovosti zákazníků v poměru s náklady na zákaznickou podoporu a tak dále. Tyto možnosti jsou potenciálním rošířením nástroje do budoucna, jsou však nad rámec této práce.
+
+
 \subsubsection{Návštěvníci}
 
 
